test/badMerge1.slq

def main(){
    x:=H(0);
    if x {
       t:=+1;
    } else {
       t:=-1;
    }
	return (t,x); /// error
}
